--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
      </div>
          <!-- succesfully added  -->
     <div id="added-total" class=" hidden z-10 fixed inset-0 bg-black bg-opacity-40 flex justify-end ">
-      <div class="py-8 px-4 bg-white rounded-lg shadow-lg flex justify-center flex-col items-center">
+      <div class="py-8 px-4 bg-white  rounded-l-lg shadow-lg flex justify-center flex-col items-center">
         <h3 id="added-itmes" class="text-xl font-bold">You have successfully added <span id="itmes-color"></span>jacket</h3>
         <button id="clear-all" class="mx-6 my-6 px-3 py-2 rounded-lg font-bold bg-primary">Continue shoping</button>
       </div>
