--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         <button id="continue-shoping" class="mx-6 my-6 px-3 py-2 rounded-lg font-bold bg-primary">Continue shoping</button>
       </div>
      </div>
-         <!-- succesfully added  -->
-    <div id="added-total" class=" hidden z-10 fixed inset-0 bg-black bg-opacity-40 flex justify-end ">
-      <div class="py-8 px-4 bg-white  rounded-l-lg shadow-lg flex justify-center flex-col items-center">
+         <!--  added  -->
+    <div id="added-total" class="right-0 transform shadow-lg w-2/5 -translate-x-full  transition-transform duration-500 z-10 fixed inset-0 bg-gray-200  flex  ">
+      <div class="py-8 px-4 rounded-l-lg  flex justify-center flex-col items-center">
         <h3 id="added-itmes" class="text-xl font-bold">You have successfully added <span id="itmes-color"></span>jacket</h3>
         <button id="clear-all" class="mx-6 my-6 px-3 py-2 rounded-lg font-bold bg-primary">Continue shoping</button>
       </div>
